[package]
name = "mariok-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["default", "vorbis", "webp", "jpeg"] }
bevy_rapier3d = { version = "0.28", features = [ "simd-stable", "debug-render-3d" ] }
bevy_panorbit_camera = "0.21.0"
rfd = "0.17.2"
wasm-bindgen = "0.2"
futures-lite = "2.0"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.12", features = ["v4", "js"] }
web-sys = { version = "0.3", features = [
    "Blob",
    "File", 
    "Url", 
    "Window", 
    "Document", 
    "Element", 
    "HtmlInputElement"
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
